--- a/src/pages/Msg.css
+++ b/src/pages/Msg.css
@@ -1,8 +1,9 @@
 .messageBox{
-    padding: 1vmax;
+    padding: 5px;
     margin: 1vmax;
     border-radius: 0.5vmax;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     clear: both;
     font-size: 1.2vmax;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -20,4 +21,16 @@
     text-align: left;
     background-color: rgb(196, 255, 184);
     
+}
+#time1{
+    color: black;
+    font-size: smaller;
+    text-align: right;
+
+}
+#time2{
+    color: black;
+    font-size: smaller;
+    text-align: left;
+
 }
