--- a/src/pages/Chat.css
+++ b/src/pages/Chat.css
@@ -81,3 +81,55 @@
     margin-left: 25rem;
     margin-right: 20rem;
 }
+@media only screen and (max-width:500px){
+    #box{
+        width: 60%;
+        overflow-x: hidden;
+    }
+    #date{
+        margin-left:5rem;
+        width: 50%;
+        
+    }
+    #leave{
+        margin-left: 0.2rem;
+    }
+    #msg{
+        margin-left:7rem ;
+    }
+}
+@media only screen and (max-width:800px){
+    #box{
+        width: 60%;
+        overflow-x: hidden;
+    }
+    #date{
+        margin-left:5rem;
+        width: 50%;
+        
+    }
+    #leave{
+        margin-left: 0.2rem;
+    }
+    #msg{
+        margin-left:8rem ;
+    }
+}
+@media only screen and (max-width:1200px){
+    #box{
+        width: 60%;
+        overflow-x: hidden;
+        
+    }
+    #date{
+        margin-left:8rem;
+        width: 50%;
+        
+    }
+    #leave{
+        margin-left: 0.2rem;
+    }
+    #msg{
+        margin-left: 15rem ;
+    }
+}
